<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".balance.BalanceFragment"
    android:padding="@dimen/padding_medium">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        tools:context=".balance.BalanceFragment"
        android:padding="@dimen/padding_medium">

        <Spinner
            android:id="@+id/account_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Spinner
            android:id="@+id/currency_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    </LinearLayout>

    <TextView
        android:id="@+id/balance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/balance_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        tools:context=".balance.BalanceFragment">

        <TextView
            android:id="@+id/balance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/balanceMargin"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="1 000" />

        <TextView
            android:id="@+id/balance_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="$" />

    </LinearLayout>

    <!--<com.github.mikephil.charting.charts.PieChart-->
        <!--android:id="@+id/balance_diagram"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balance_second_currency_text_view">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/title_brief_overview_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/title_brief_overview"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_revenue_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/title_revenue"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_brief_overview_text_view" />


            <TextView
                android:id="@+id/value_revenue_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"

                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/revenueText"
                app:layout_constraintEnd_toStartOf="@+id/revenue_currency_text_view"
                app:layout_constraintTop_toTopOf="@+id/title_revenue_text_view" />

            <TextView
                android:id="@+id/revenue_currency_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"

                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/revenueText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/value_revenue_text_view"
                tools:text="₽" />

            <TextView
                android:id="@+id/title_expense_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/title_expense"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_revenue_text_view" />

            <TextView
                android:id="@+id/value_expense_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/expenseText"
                app:layout_constraintEnd_toStartOf="@+id/expense_currency_text_view"
                app:layout_constraintTop_toTopOf="@+id/title_expense_text_view" />

            <TextView
                android:id="@+id/expense_currency_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/expenseText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/value_expense_text_view"
                tools:text="₽" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>